Update contract with two controllers
