# src/main/java/com/maven/student/infrastructure/util/TeacherMapper.java
@@ -3,25 +3,25 @@ package com.maven.student.infrastructure.util;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.Mappings;
-import com.maven.student.domain.model.StudentEntity;
-import com.openapi.generate.model.RequestStudentDto;
-import com.openapi.generate.model.ResponseStudentDto;
+import com.maven.student.domain.model.TeacherEntity;
+import com.openapi.generate.model.RequestTeacherDto;
+import com.openapi.generate.model.ResponseTeacherDto;
 
 /**
- * StudentMapper.
+ * TeacherMapper.
  * This interface defines methods to map between RequestDto, ResponseDto, and StudentEntity.
  * It uses MapStruct for the mapping implementation.
  *
  * @author Joseph Magallanes
- * @since 2025-06-16
+ * @since 2025-06-25
  */
 @Mapper(componentModel = "spring")
-public interface StudentMapper {
+public interface TeacherMapper {
 
     /**
-     * Maps a RequestDto to a StudentEntity.
-     * @param request the RequestDto to map
-     * @return the mapped StudentEntity
+     * Maps a RequestTeacherDto to a TeacherEntity.
+     * @param request the RequestTeacherDto to map
+     * @return the mapped TeacherEntity
      */
     @Mappings({
         @Mapping(source = "id", target = "id"),
@@ -31,12 +31,12 @@ public interface StudentMapper {
         @Mapping(source = "status", target = "status"),
         @Mapping(source = "age", target = "age")
     })
-    StudentEntity requestToStudent(RequestStudentDto request);
+    TeacherEntity requestToTeacher(RequestTeacherDto request);
 
     /**
-     * Maps a StudentEntity to a ResponseDto.
-     * @param student the StudentEntity to map
-     * @return the mapped ResponseDto
+     * Maps a TeacherEntity to a ResponseTeacherDto.
+     * @param student the TeacherEntity to map
+     * @return the mapped ResponseTeacherDto
      */
     @Mappings({
         @Mapping(source = "id", target = "id"),
@@ -46,6 +46,6 @@ public interface StudentMapper {
         @Mapping(source = "status", target = "status"),
         @Mapping(source = "age", target = "age")
     })
-    ResponseStudentDto studentToResponse(StudentEntity student);
+    ResponseTeacherDto teacherToResponse(TeacherEntity student);
 
 }
